# OpenClaw-Alpha

./: .env.sample  .gitignore  CLAUDE.md  SKILL.md  pyproject.toml  pytest.ini
.claude/: settings.json
docs/: README.md  development-environment.md  project-overview.md
docs/announcement-analysis/: design.md  spec.md
docs/architecture/: code-converter-design.md  core-utilities.md  news-subscription.md  signal-backtest-framework.md  strategy-framework.md  strategy-refactor.md  web-service.md
docs/design/: README.md  news-hotness.md  (+1 more)
progress/: 2026-03-06-industry-trend-skill.md  2026-03-07-add-missing-tests.md  2026-03-07-announcement-analysis-skill.md  2026-03-07-etf-analysis-skill.md  2026-03-07-fix-import-errors.md  2026-03-07-fix-skill-docs.md  2026-03-07-fix-test-conflict.md  2026-03-07-fund-flow-skill.md  2026-03-07-fundamental-analysis-skill.md  2026-03-07-index-analysis-skill.md  2026-03-07-industry-trend-debug.md  2026-03-07-lhb-tracker-skill.md  2026-03-07-market-sentiment-skill.md  2026-03-07-portfolio-analysis-skill.md  2026-03-07-risk-alert-skill.md  2026-03-07-stock-analysis-skill.md  2026-03-07-stock-screener-skill.md  2026-03-07-technical-indicators-skill.md  2026-03-07-watchlist-monitor-skill.md  2026-03-08-add-tests-for-missing-skills.md  2026-03-08-alert-monitor-skill.md  2026-03-08-backtest-skill.md  2026-03-08-backtest-strategies.md  2026-03-08-batch-risk-scan.md  2026-03-08-crowdedness-indicator.md  2026-03-08-docs-optimization.md  2026-03-08-equity-bond-ratio.md  2026-03-08-exploration-and-enhancement.md  2026-03-08-financial-health-enhancement.md  2026-03-08-industry-heat-change.md  2026-03-08-margin-trading-skill.md  2026-03-08-market-breadth-indicator.md  2026-03-08-market-overview-skill.md  2026-03-08-market-timing-research.md  2026-03-08-option-analysis-skill.md  2026-03-08-portfolio-optimization.md  2026-03-08-rotation-score.md  2026-03-08-rsi-strategy.md  2026-03-08-sector-prosperity.md  2026-03-08-smart-dip.md  (+15 more)
scripts/: datasource_compare.py
skills/: __init__.py
tests/: conftest.py
(+830 files in other folders)
