[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-alpha"
version = "0.1.0"
description = "OpenClaw 股票金融数据获取和分析技能库"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.17.49",
    "apscheduler>=3.11.2",
    "backtrader>=1.9.78.123",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "ta-lib>=0.6.8",
    "tenacity>=8.0.0",
    "tushare>=1.4.24",
    "uvicorn>=0.41.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_alpha"]
